fixed a word overflow issue

--- a/Public/styles/main.css
+++ b/Public/styles/main.css
@@ -46,6 +46,7 @@ h2 {
 .article {
     border-radius: 12px;
     padding: 15px 20px;
+    overflow-wrap: break-word;
 }
 
 .article a {
